fixed invisible links on thoughts#show. added missing in footer links.

--- a/public/stylesheets/application.scss
+++ b/public/stylesheets/application.scss
@@ -322,3 +322,6 @@ body:before {
   font-family: $people-font;
   color: #fff;
 }
+.people-content a {
+  color: #fff;
+}
